<?xml version="1.0"?>
<package format="2">
  <name>franka_buttons</name>
  <version>0.0.1</version>
  <description>Read the franka buttons and publish it in ROS</description>

  <maintainer email="g.franzese@tudelft.nl">Giovanni Franzese</maintainer>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>






